--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta charset="utf-8">
+  
+
+<meta property="og:type" content="acticle">
+  <meta property="og:site_name" content="sete好呀好呀">
+  
+
+  
+  <meta property="og:title" content="好呀好呀">
+<meta property="og:description" content="描述描述描述描述豆腐干豆腐干豆腐干自行车VS的规定格式大概豆腐干豆腐干说的是感动感动感动描述描述描述">
+<meta property="og:image:width" content="30">
+<meta property="og:image:height" content="30">
+<meta property="og:image" content="https://www.upmedia.mg/upload/content/20241226/QK241226111619179412.jpg">
+<meta property="og:url" content="https://www.baidu.com">
+</head>
 <body>
 <div>
-我是个好人
+我是个好人111
 </div>
 </body>
 </html>
