--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta property="og:image:height" content="30">
 <meta property="og:image" content="https://www.upmedia.mg/upload/content/20241226/QK241226111619179412.jpg">
 <meta property="og:url" content="https://www.baidu.com">
+  <script src="cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"
 </head>
 <body>
 <div>
@@ -33,7 +34,7 @@
     </div>
 </div>
 </body>
-  <style>
+  <style lang="less">
     .text-content {
     overflow: hidden;
     display: -webkit-box;
