--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:image:height" content="30">
 <meta property="og:image" content="https://www.upmedia.mg/upload/content/20241226/QK241226111619179412.jpg">
 <meta property="og:url" content="https://www.baidu.com">
-  <script src="cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js" />
 </head>
 <body>
 <div>
